--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.js"></script>
     
     <style>
-      html, body, #tacoMap { width: 100%; height: 100%; }
+      html, body, #tacoMap { 
+        margin: 0;
+        padding: 0;
+        width: 100%; 
+        height: 100%; 
+      }
     </style>
   </head>
   <body>
@@ -14,6 +19,10 @@
     
     <script>
       var mymap = L.map('tacoMap').setView([34.04,-118.22], 13);
+      L.tileLayer('https://api.mapbox.com/styles/v1/matikin9/cim5bt1q100iy9jkpl7ff9d1h/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWF0aWtpbjkiLCJhIjoiYjMyMjBjZTE4NWUxMDkxOWZjZjFjZWEzZTcxNDUxOTkifQ._ldFl3e17jCs7aWm6zMZ3Q', {
+        attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+        maxZoom: 18
+    }).addTo(mymap);
     </script>
   </body>
 </html>
